Extract langInfo from toolbar and fixed statusbar border overflow bug.

--- a/src/less/summernote.less
+++ b/src/less/summernote.less
@@ -110,6 +110,8 @@
   /* statusbar */
   .note-statusbar {
     background-color: @background-color;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
     .note-resizebar {
       padding-top: 1px;
       height: 8px;
